--- a/docs/inherited-instructions.Rmd
+++ b/docs/inherited-instructions.Rmd
@@ -3,7 +3,9 @@ title: Inherited knowledge
 output:
   bookdown::pdf_document2:
     toc: no
-  github_document: {}
+  github_document:
+    toc: yes
+    toc_depth: 3
 ---
 ```{r config, include=FALSE}
 library(knitr)
@@ -29,197 +31,73 @@ to exceed previous generations?
 
 # Methods
 
+Participants had to learn to categorize visual stimuli on the basis of two
+visual dimensions. The stimuli were sinusoidal gabor patches that varied in
+orientation and spatial frequency. Participants were told to think of each gabor
+patch as a "gem" and that their task was to find the most valuable gems. Finding
+the most valuable gems required integrating along both the orientation and
+spatial frequency dimensions.
+
+Participants were assigned to Generation 1 or Generation 2. Generation 1
+participants completed the task naively, without any instructions about what
+makes some gems more valuable. After 1 block of trials, these participants wrote
+down a description of what makes some gems more valuable so as to be
+helpful to the next generation. Generation 2 participants inherit these
+instructions, and read them before completing the trials. After 1 block
+of trials, Generation 2 participants write down their description of
+what makes some gems more valuable, and complete the second block of trials.
+
 ## Procedure
 
-On each trial, participants see 6 gabor patches ("gems") that vary in
-orientation and bar width and they select the one they think is most valuable.
+On each trial, participants are presented 6 gabor patches ("gems") that vary in
+orientation and spatial frequency. They have to select one they think will be
+most valuable. After selecting a gem, they receive feedback about its value
+relative to the value of the gem they selected on the previous trial. For
+example, a participant might learn that the gem they selected that was worth +3
+more than their previous one. They are also shown their new total score, a number
+between 0 and 100.
 
-Unbeknownst to the participants, the 6 gabors they see on each trial
-are sampled from within a certain radius in stimulus space of their last
-trial.
-
-Participants are assigned to Generation 1 or Generation 2.
-
-- Generation 1 participants complete 2 blocks, then they type out instructions
-  for the next generation, then they complete 2 more blocks.
-- Generation 2 participants read the instructions from Generation 1, then
-  complete 4 blocks.
+\newpage
 
 # Results
 
-```{r results, fig.width=6, fig.height=3}
-scores_plot
-```
+(ref:scores) Score over trials and blocks. Gray lines show simulated performance
+of optimal and random walk agents.
 
-```{r results-final, fig.width=3, fig.height=3}
-final_scores_plot
+```{r scores, fig.width=8, fig.height=4, fig.cap="(ref:scores)"}
+scores_plot + final_scores_plot
 ```
 
 ## Instructions
 
-```{r gen1-gen2-instructions}
-InstructionsGen1 <- Instructions %>%
-  filter(version == 1.3, generation == 1) %>%
-  select(-version, -generation)
-
-InstructionsGen2 <- Instructions %>%
-  filter(version == 1.3, generation == 2) %>%
-  left_join(inheritance_map) %>%
-  select(-version, -generation)
+```{r instructions-coded, fig.width=5, fig.height=6}
+instructions_coded_plot + instructions_summarized_plot + plot_layout(nrow = 2)
 ```
 
-```{r instructions-coded}
-ggplot(InstructionsCoded) +
-  aes(dimension) +
-  geom_bar(aes(fill = factor(score)), stat = "count", position = "stack") +
-  scale_fill_discrete("", labels = c("Didn't mention", "Incomplete or inaccurate", "Correct"))
+```{r instructions-outcomes, fig.width=3, fig.height=3, fig.caption="Correlation between final score in block 1 and instruction quality. Participants who generated better instructions tended to do better in the task."}
+instruction_quality_and_performance_plot +
+  labs(x = "", y = "final score in block 1") +
+  theme(legend.position = "none",
+        axis.text.x = element_text(angle=45, hjust=1))
 ```
 
-```{r instructions-outcomes, fig.width=3, fig.height=3}
-InstructionsCodedSummarized <- InstructionsCoded %>%
-  group_by(subj_id) %>%
-  summarize(instructions_score = sum(score))
+## The effects of inherited instructions
 
-GemsCoded <- left_join(GemsFinal, InstructionsCodedSummarized) %>%
-  drop_na(instructions_score)
+### Are instructions better than no instructions?
 
-filter(GemsCoded, block_ix <= 2) %>%
-  ggplot() +
-  aes(instructions_score, score) +
-  geom_point() +
-  geom_point(stat = "summary", fun.y = "mean", size = 5)
+Participants in Generation 2 will benefit from accurate instructions
+in block 1 relative to naive participants in Generation 1, block 1.
+
+```{r instructions-v-no-instructions}
+instructions_versus_no_instructions_plot
 ```
 
-```{r instructions-inherited, fig.width=6, fig.height=3}
-generation_map <- select(Gems, subj_id, generation, inherit_from) %>% unique()
-instructions_with_generations <- left_join(generation_map, InstructionsCodedSummarized)
+### Are instructions better than 1 block of training?
 
-gen1 <- instructions_with_generations %>%
-  filter(generation == 1) %>%
-  select(-inherit_from, -generation) %>%
-  rename(inherit_from = subj_id)
+Participants in Generation 2 will benefit from accurate instructions
+relative to how participants in Generation 1 perform _after_ generating
+the instructions.
 
-gen2 <- instructions_with_generations %>%
-  filter(generation == 2) %>%
-  select(-instructions_score)
-
-map <- left_join(gen2, gen1)
-
-Gems %>%
-  left_join(map) %>%
-  filter(generation == 2) %>%
-  drop_na(instructions_score) %>%
-  ggplot() +
-  aes(trial, score, color = factor(instructions_score)) +
-  geom_line(stat = "summary", fun.y = "mean")
-```
-
-## Survey
-
-### Predictability
-
-```{r predictability, fig.width=8}
-predictable_plot <- ggplot(Survey) +
-  aes(generation_f, predictable) +
-  geom_bar(aes(fill = generation_f, width = 0.8),
-           stat = "summary", fun.y = "mean",
-           alpha = 0.4) +
-  geom_point(aes(color = generation_f),
-             position = position_jitter(width = 0.1, height = 0.1)) +
-  labs(title = "How predictable or random did you\nfeel the values of the gems were?") +
-  coord_cartesian(xlim = c(0, 3), ylim = c(0.9, 5.1), expand = FALSE) +
-  theme(legend.position = "none")
-
-subj_predictabilities <- select(Survey, subj_id, predictable)
-
-predictable_final_plot <- ggplot(left_join(GemsFinal, subj_predictabilities)) +
-  aes(predictable, score) +
-  geom_point(aes(color = generation_f), position = position_jitter(width = 0.1, height = 0)) +
-  geom_smooth(method = "lm", color = NA)
-
-predictable_plot + predictable_final_plot + plot_layout(nrow = 1)
-```
-
-### Effort
-
-```{r effort, fig.width=4}
-effort_plot <- ggplot(Survey) +
-  aes(generation_f, effort) +
-  geom_bar(aes(fill = generation_f, width = 0.8),
-           stat = "summary", fun.y = "mean",
-           alpha = 0.4) +
-  geom_point(aes(color = generation_f),
-             position = position_jitter(width = 0.1, height = 0.1)) +
-  labs(title = "Please rate your overall effort\nin this experiment.") +
-  coord_cartesian(xlim = c(0, 3), ylim = c(0.9, 5.1), expand = FALSE) +
-  theme(legend.position = "none")
-
-effort_plot
-```
-
-## Hypotheses
-
-\newpage
-
-### H1
-
-_How does the performance of Generation 1 participants in blocks 1 and 2
-compare to the performance of Generation 2 participants in blocks 1 and 2?_
-
-Generation 2, having benefitted from the instructions left by
-Generation 1, will exceed the performance of Generation 2 in the
-first two blocks.
-
-```{r first-blocks}
-FirstBlocks <- Gems %>%
-  filter(block_ix %in% 1) %>%
-  recode_trial()
-
-first_blocks_mod <- lmer(score ~ (trial_z + trial_z_sqr) * generation_c + (trial_z + trial_z_sqr|subj_id),
-                         data = FirstBlocks)
-
-first_blocks_preds <- expand.grid(trial = 0:80, generation_c = c(-0.5, 0.5)) %>%
-  recode_trial() %>%
-  cbind(., predictSE(first_blocks_mod, newdata = ., se = TRUE)) %>%
-  rename(score = fit, se = se.fit) %>%
-  recode_generation()
-
-ggplot(FirstBlocks) +
-  aes(trial, score) +
-  geom_point(aes(color = generation_f),
-             stat = "summary", fun.y = "mean")
-  # geom_smooth(aes(ymin = score - se, ymax = score + se, color = generation_f),
-  #             stat = "identity", data = first_blocks_preds)
-```
-
-\newpage
-
-### H2
-
-_How does the performance of Generation 1 participants in block 2
-compare to the performance of Generation 2 participants in block 1?_
-
-Generation 2 will benefit from the instructions left by Generation 1 in block 1
-more than Generation 1 in block 2.
-
-```{r post-instructions}
-PostInstructions <- Gems %>%
-  filter((generation == 1 & block_ix == 2) | (generation == 2 & block_ix == 1)) %>%
-  recode_trial()
-
-post_instructions_mod <- lmer(score ~ (trial_z + trial_z_sqr) * generation_c + (trial_z + trial_z_sqr|subj_id),
-                              data = PostInstructions)
-
-post_instructions_preds <- expand.grid(trial = 0:80, generation_c = c(-0.5, 0.5)) %>%
-  recode_trial() %>%
-  cbind(., predictSE(post_instructions_mod, newdata = ., se = TRUE)) %>%
-  rename(score = fit, se = se.fit) %>%
-  recode_generation()
-
-ggplot(PostInstructions) +
-  aes(trial, score) +
-  geom_point(aes(color = generation_f),
-             stat = "summary", fun.y = "mean")
-  # geom_smooth(aes(ymin = score - se, ymax = score + se, color = generation_f),
-  #             stat = "identity", data = post_instructions_preds)
+```{r instructions-v-one-block}
+instructions_versus_one_block_plot
 ```
