--- a/docs/supplementary-materials.Rmd
+++ b/docs/supplementary-materials.Rmd
@@ -2,14 +2,18 @@
 title: Supplementary materials
 output:
   bookdown::pdf_document2:
-    toc: no
+    toc: yes
+  github_document: {}
 ---
 ```{r inherited-diversity-config, include=FALSE}
 library(knitr)
 library(kableExtra)
-opts_chunk$set(echo=FALSE, cache=TRUE, message=FALSE, warning=FALSE, results="hide",
+opts_chunk$set(echo=FALSE, cache=TRUE, message=FALSE, warning=FALSE,
                fig.height=4, fig.width=4)
+
 read_chunk("R/supplemental-v1-1.R")
+read_chunk("R/supplemental-v1-2.R")
+read_chunk("R/supplemental-v1-3.R")
 
 library(patchwork)
 library(pander)
@@ -33,7 +37,10 @@ v1.1_final_scores_plot + v1.1_final_distances_plot
 
 ## V1.2
 
-```{r gen1-gen2-instructions}
+```{r v1-2, include=FALSE}
+```
+
+```{r v1-2-instructions}
 InstructionsGen1 <- Instructions %>%
   filter(version == 1.2, generation == 1) %>%
   select(-version, -generation)
@@ -45,4 +52,74 @@ InstructionsGen2 <- Instructions %>%
 
 left_join(InstructionsGen1, InstructionsGen2, by = c("subj_id" = "inherit_from"), suffix = c("_gen1", "_gen2")) %>%
   pander(split.cells = c(5, 25, 5, 25))
+```
+
+## V1.3
+
+```{r v1-3, include=FALSE}
+```
+
+### Instructions
+
+```{r v1-3-instructions}
+InstructionsGen1 <- Instructions %>%
+  filter(version == 1.3, generation == 1) %>%
+  select(-version, -generation)
+
+InstructionsGen2 <- Instructions %>%
+  filter(version == 1.3, generation == 2) %>%
+  left_join(inheritance_map) %>%
+  select(-version, -generation)
+
+left_join(InstructionsGen1, InstructionsGen2, by = c("subj_id" = "inherit_from"), suffix = c("_gen1", "_gen2")) %>%
+  pander(split.cells = c(5, 25, 5, 25))
+```
+
+### Survey
+
+#### Predictability
+
+```{r predictability, fig.width=8}
+predictable_plot <- ggplot(Survey) +
+  aes(generation_f, predictable) +
+  geom_bar(aes(fill = generation_f, width = 0.8),
+           stat = "summary", fun.y = "mean",
+           alpha = 0.4) +
+  geom_point(aes(color = generation_f),
+             position = position_jitter(width = 0.1, height = 0.1)) +
+  labs(title = "How predictable or random did you\nfeel the values of the gems were?") +
+  coord_cartesian(xlim = c(0, 3), ylim = c(0.9, 5.1), expand = FALSE) +
+  theme(legend.position = "none")
+
+subj_predictabilities <- select(Survey, subj_id, predictable)
+
+predictable_final_plot <- ggplot(left_join(GemsFinal, subj_predictabilities)) +
+  aes(predictable, score) +
+  geom_point(aes(color = generation_f), position = position_jitter(width = 0.1, height = 0)) +
+  geom_smooth(method = "lm", color = NA)
+
+predictable_plot + predictable_final_plot + plot_layout(nrow = 1)
+```
+
+#### Effort
+
+```{r effort, fig.width=4}
+effort_plot <- ggplot(Survey) +
+  aes(generation_f, effort) +
+  geom_bar(aes(fill = generation_f, width = 0.8),
+           stat = "summary", fun.y = "mean",
+           alpha = 0.4) +
+  geom_point(aes(color = generation_f),
+             position = position_jitter(width = 0.1, height = 0.1)) +
+  labs(title = "Please rate your overall effort\nin this experiment.") +
+  coord_cartesian(xlim = c(0, 3), ylim = c(0.9, 5.1), expand = FALSE) +
+  theme(legend.position = "none")
+
+effort_plot
+```
+
+### Random walk
+
+```{r bots-asymptote}
+bots_asymptote_plot
 ```
