Analyze more of 1.3 gen2

--- a/docs/inherited-instructions.Rmd
+++ b/docs/inherited-instructions.Rmd
@@ -31,50 +31,35 @@ to exceed previous generations?
 
 # Methods
 
-Participants had to learn to categorize visual stimuli on the basis of two
+Participants learned to categorize visual stimuli on the basis of two
 visual dimensions. The stimuli were sinusoidal gabor patches that varied in
 orientation and spatial frequency. Participants were told to think of each gabor
-patch as a "gem" and that their task was to find the most valuable gems. Finding
-the most valuable gems required integrating along both the orientation and
-spatial frequency dimensions.
+patch as a "gem" and that their task was to find the most valuable gems.
+The value of each gem was determined by its orientation and spatial frequency.
 
-Participants were assigned to Generation 1 or Generation 2. Generation 1
-participants completed the task naively, without any instructions about what
-makes some gems more valuable. After 1 block of trials, these participants wrote
-down a description of what makes some gems more valuable so as to be
-helpful to the next generation. Generation 2 participants inherit these
-instructions, and read them before completing the trials. After 1 block
-of trials, Generation 2 participants write down their description of
-what makes some gems more valuable, and complete the second block of trials.
+Participants were assigned to the first or second generation of a two-generation
+transmission chain. Generation 1 participants completed the task naively,
+without receiving instructions about what makes some gems more valuable. After
+one block of trials, these participants wrote down a description of what makes
+some gems more valuable that would be helpful to the next generation.
+Participants assigned to the second generation inherited these instructions, and
+read them before completing their trials. After one block of trials, participants
+in generation 2 wrote down a description of what makes some gems more valuable,
+and completed a second block of trials.
 
 ## Procedure
 
 On each trial, participants are presented 6 gabor patches ("gems") that vary in
-orientation and spatial frequency. They have to select one they think will be
+orientation and spatial frequency, and they select one expected to be the
 most valuable. After selecting a gem, they receive feedback about its value
 relative to the value of the gem they selected on the previous trial. For
-example, a participant might learn that the gem they selected that was worth +3
+example, a participant might learn that the gem they selected was worth +3
 more than their previous one. They are also shown their new total score, a number
 between 0 and 100.
 
 \newpage
 
 # Results
-
-## Scores
-
-(ref:scores) Score over trials and blocks. Gray lines show simulated performance
-of optimal and random walk agents.
-
-```{r scores, fig.width=8, fig.height=4, fig.cap="(ref:scores)"}
-scores_plot + final_scores_plot
-```
-
-## Reaction times
-
-```{r rts, fig.width=5, fig.height=4}
-rts_plot
-```
 
 ## Instructions
 
@@ -88,25 +73,24 @@ instruction_quality_and_performance_plot + instruction_quality_and_final_perform
 
 \newpage
 
-## The effects of inherited instructions
+## The effect of inherited instructions
 
-### Are instructions better than no instructions?
+**Are instructions better than no instructions?** Participants in Generation 2
+will benefit from accurate instructions in block 1 relative to naive
+participants in Generation 1, block 1.
 
-Participants in Generation 2 will benefit from accurate instructions
-in block 1 relative to naive participants in Generation 1, block 1.
+**Are instructions better than one block of training?** Participants in
+Generation 2 will benefit from accurate instructions relative to how
+participants in Generation 1 perform _after_ generating the instructions.
 
-```{r instructions-v-no-instructions}
+```{r score-by-generation, fig.width=5, fig.height=4}
+score_by_generation_plot
+```
+
+```{r block1-by-instructions-type, fig.width=6, fig.height=4}
 instructions_versus_no_instructions_plot
 ```
 
-\newpage
+# Discussion
 
-### Are instructions better than 1 block of training?
-
-Participants in Generation 2 will benefit from accurate instructions
-relative to how participants in Generation 1 perform _after_ generating
-the instructions.
-
-```{r instructions-v-one-block}
-instructions_versus_one_block_plot
-```
+# References
